# glibtests

./: Makefile.am  README.txt  bootstrap  configure.ac  gameloop.c  glib_test.c
game/: Makefile  Makefile.am  Makefile.in  gameloop.c
game/.deps/: gameloop-gameloop.Po
