bin_PROGRAMS = glib_test lists gameloop
 
glib_test_SOURCES = glib_test.c
glib_test_CFLAGS =  $(GLIB_CFLAGS)
glib_test_LDFLAGS = $(GLIB_LIBS)

lists_SOURCES = lists.c
lists_CFLAGS =  $(GLIB_CFLAGS)
lists_LDADD = $(GLIB_LIBS)

gameloop_SOURCES = gameloop.c
gameloop_CFLAGS =  $(GLIB_CFLAGS)
gameloop_LDADD = $(GLIB_LIBS) -lwinmm
